feat: improve date handling and add embed timestamp